Attempt to fix not loading issue on iphone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,7 @@ td { vertical-align: top; }
 
 #x9y8, #x9y9{background-color: #0093dd;}
 
+#x8y8 {background: #FFF}
 /*
 #center { background: url('/img/center.gif') no-repeat scroll top left; width: 119px; height: 119px; position: absolute; top: 240px; left: 241px; }
 
